# minidecaf

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Exp.java  LICENSE  README.md  build.gradle  run_once.sh  test.sh
doc/: guide-framework.md  minidecaf-spec.md
src/: CodeGenVisitor.cpp  CodeGenVisitor.h  Makefile  VarAllocVisitor.cpp  VarAllocVisitor.h  ast.h  ast.rs  chibi.h  chibi.out  chibicc  codegen.cpp  codegen.rs  ir.rs  lexer.cpp  lexer.h  lib.rs  main.cpp  main.rs  parser.cpp  parser.h  parser.rs  test_examples.sh  token.h  type.cpp
src/main/antlr/: MiniDecaf.g4
src/main/java/minidecaf/: Main.java  MainVisitor.java  MiniDecafVisitor.java
src/main/java/minidecaf/parser/: MiniDecafBaseVisitor.java  MiniDecafLexer.g4  MiniDecafLexer.interp  MiniDecafLexer.java  MiniDecafLexer.tokens  MiniDecafParser.g4  MiniDecafParser.interp  MiniDecafParser.java  MiniDecafParser.tokens  MiniDecafParserBaseVisitor.java  MiniDecafParserVisitor.java  run_antlr.sh
src/test/: chibicc
src/test/step6/: if_nested_2.c
test/: case.cpp  main.out  run  test.sh
test/test/: main.out  run
testcases/: 0.out  test.sh
